--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,16 @@ jobs:
         with:
           go-version: '1.22'
 
+      - name: Create .env file
+        run: |
+          echo "PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}" > .env
+          echo "PINECONE_INDEX=${{ secrets.PINECONE_INDEX }}" >> .env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+
       - name: Build
         run: go build -v ./...
 
@@ -55,16 +65,6 @@ jobs:
       - name: Install SSH client
         run: sudo apt-get install -y sshpass
 
-      - name: Create .env file
-        run: |
-          echo "PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}" > .env
-          echo "PINECONE_INDEX=${{ secrets.PINECONE_INDEX }}" >> .env
-          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
-          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-
       - name: Copy .env file to Raspberry Pi
         env:
           PI_HOST: ${{ secrets.PI_HOST }}
@@ -74,22 +74,33 @@ jobs:
           sshpass -p $PI_PASSWORD scp -o StrictHostKeyChecking=no .env $PI_USER@$PI_HOST:/home/$PI_USER/.env
           sshpass -p $PI_PASSWORD ssh -o StrictHostKeyChecking=no $PI_USER@$PI_HOST "chmod 600 /home/$PI_USER/.env"
 
-      - name: Connect to Raspberry Pi and run Docker commands
+      - name: Connect to Raspberry Pi and manage Docker container
+        env:
+          PI_HOST: ${{ secrets.PI_HOST }}
+          PI_USER: ${{ secrets.PI_USER }}
+          PI_PASSWORD: ${{ secrets.PI_PASSWORD }}
+          DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:latest
+        run: |
+          sshpass -p $PI_PASSWORD ssh -o StrictHostKeyChecking=no $PI_USER@$PI_HOST << EOF
+          echo "Connected to Raspberry Pi"
+          CONTAINER_ID=\$(docker ps -q -f ancestor=$DOCKER_IMAGE)
+          if [ "\$CONTAINER_ID" ]; then
+            echo "Stopping and removing existing container"
+            docker stop \$CONTAINER_ID
+            docker rm \$CONTAINER_ID
+          fi
+          echo "Pruning Docker system"
+          docker system prune -f
+          echo "Pulling latest Docker image"
+          docker pull $DOCKER_IMAGE
+          echo "Running new Docker container"
+          docker run -d -p 8080:8080 --env-file /home/$PI_USER/.env $DOCKER_IMAGE
+          EOF
+
+      - name: Verify Docker container
         env:
           PI_HOST: ${{ secrets.PI_HOST }}
           PI_USER: ${{ secrets.PI_USER }}
           PI_PASSWORD: ${{ secrets.PI_PASSWORD }}
         run: |
-          sshpass -p $PI_PASSWORD ssh -o StrictHostKeyChecking=no $PI_USER@$PI_HOST << EOF
-          echo "Connected to Raspberry Pi"
-          if [ \$(docker ps -q -f name=${{ secrets.DOCKER_REPOSITORY }}) ]; then
-            docker stop ${{ secrets.DOCKER_REPOSITORY }}
-            docker rm ${{ secrets.DOCKER_REPOSITORY }}
-          fi
-          if [ \$(docker ps -aq -f status=exited -f name=${{ secrets.DOCKER_REPOSITORY }}) ]; then
-            docker rm ${{ secrets.DOCKER_REPOSITORY }}
-          fi
-          docker system prune -f
-          docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:latest
-          docker run -d -p 8080:8080 --name ${{ secrets.DOCKER_REPOSITORY }} --env-file /home/$PI_USER/.env ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:latest
-          EOF
+          sshpass -p $PI_PASSWORD ssh -o StrictHostKeyChecking=no $PI_USER@$PI_HOST "docker ps"
