--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,16 +18,6 @@ jobs:
         with:
           go-version: '1.22'
 
-#      - name: Create .env file
-#        run: |
-#          echo "PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}" >> .env
-#          echo "PINECONE_INDEX=${{ secrets.PINECONE_INDEX }}" >> .env
-#          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
-#          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
-#          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-#          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
-#          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -41,6 +31,22 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:latest
           platforms: linux/amd64,linux/arm64
+          build-args: |
+            PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }}
+            PINECONE_INDEX=${{ secrets.PINECONE_INDEX }}
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            DB_NAME=${{ secrets.DB_NAME }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            REDIS_ADDR=${{ secrets.REDIS_ADDR }}
+            REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
+            SECRET_KEY=${{ secrets.SECRET_KEY }}
+            KAKAO_REST_API_KEY=${{ secrets.KAKAO_REST_API_KEY }}
+            KAKAO_ISSUER=${{ secrets.KAKAO_ISSUER }}
+            JWT_ISSUER=${{ secrets.JWT_ISSUER }}
+            JWT_ACCESS_VALIDITY_SECONDS=${{ secrets.JWT_ACCESS_VALIDITY_SECONDS }}
+            JWT_REFRESH_VALIDITY_SECONDS=${{ secrets.JWT_REFRESH_VALIDITY_SECONDS }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -72,18 +78,7 @@ jobs:
           echo "Pulling latest Docker image"
           docker pull $DOCKER_IMAGE
           echo "Running new Docker container"
-          docker run -d \
-          -p 8080:8080 \
-          --env PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}" \
-          --env PINECONE_INDEX="${{ secrets.PINECONE_INDEX }}" \
-          --env DB_HOST="${{ secrets.DB_HOST }}" \
-          --env DB_PORT="${{ secrets.DB_PORT }}" \
-          --env DB_NAME="${{ secrets.DB_NAME }}" \
-          --env DB_USER="${{ secrets.DB_USER }}" \
-          --env DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-          --env REDIS_ADDR="${{ secrets.REDIS_ADDR }}" \
-          --env REDIS_PASSWORD="" \
-          $DOCKER_IMAGE
+          docker run -d -p 8080:8080 $DOCKER_IMAGE
           EOF
 
       - name: Verify Docker container
