--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: List files in the working directory
+        run: ls -al
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
