--- a/.github/workflows/dev_ci_cd.yml
+++ b/.github/workflows/dev_ci_cd.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Install SSH client
         run: sudo apt-get install -y sshpass
 
-      - name: Connect to Raspberry Pi and manage Docker container
+      - name: Trigger Docker update script on Raspberry Pi
         env:
           PI_HOST: ${{ secrets.PI_HOST }}
           PI_USER: ${{ secrets.PI_USER }}
@@ -65,26 +65,6 @@ jobs:
         run: |
           sshpass -p $PI_PASSWORD ssh -o StrictHostKeyChecking=no $PI_USER@$PI_HOST << EOF
           echo "Connected to Raspberry Pi"
-          CONTAINER_ID=\$(docker ps -q --filter ancestor=$DOCKER_IMAGE)
-          if [ -n "\$CONTAINER_ID" ]; then
-            echo "Stopping and removing existing container"
-            docker stop \$CONTAINER_ID
-            docker rm \$CONTAINER_ID
-          else
-            echo "No existing container found for image $DOCKER_IMAGE"
-          fi
-          echo "Pruning Docker system"
-          docker system prune -f
-          echo "Pulling latest Docker image"
-          docker pull $DOCKER_IMAGE
-          echo "Running new Docker container"
-          docker run -d -p 8080:8080 $DOCKER_IMAGE
+          nohup /home/sunwupark/Downloads/update_docker.sh $DOCKER_IMAGE > docker_update.log 2>&1 &
+          echo "Docker update script started in the background."
           EOF
-
-      - name: Verify Docker container
-        env:
-          PI_HOST: ${{ secrets.PI_HOST }}
-          PI_USER: ${{ secrets.PI_USER }}
-          PI_PASSWORD: ${{ secrets.PI_PASSWORD }}
-        run: |
-          sshpass -p $PI_PASSWORD ssh -o StrictHostKeyChecking=no $PI_USER@$PI_HOST "docker ps"
