--- a/.github/workflows/prod_ci_cd.yml
+++ b/.github/workflows/prod_ci_cd.yml
@@ -71,7 +71,7 @@ jobs:
             {"name":"DB_NAME","value":"${{ secrets.DB_NAME }}"},
             {"name":"DB_USER","value":"${{ secrets.DB_USER }}"},
             {"name":"DB_PASSWORD","value":"${{ secrets.DB_PASSWORD }}"},
-            {"name":"REDIS_ADDR","value":"${{ secrets.REDIS_ADDR }}"},
+            {"name":"REDIS_ADDR","value":"${{ secrets.ELASTICACHE_ADDR }}"},
             {"name":"REDIS_PASSWORD","value":"${{ secrets.REDIS_PASSWORD }}"},
             {"name":"SECRET_KEY","value":"${{ secrets.SECRET_KEY }}"},
             {"name":"KAKAO_REST_API_KEY","value":"${{ secrets.KAKAO_REST_API_KEY }}"},
