Feat: changed to rds adn elasticache

--- a/.github/workflows/prod_ci_cd.yml
+++ b/.github/workflows/prod_ci_cd.yml
@@ -66,13 +66,13 @@ jobs:
           jq '.containerDefinitions[0].environment += [
             {"name":"PINECONE_API_KEY","value":"${{ secrets.PINECONE_API_KEY }}"},
             {"name":"PINECONE_INDEX","value":"${{ secrets.PINECONE_INDEX }}"},
-            {"name":"DB_HOST","value":"${{ secrets.DB_HOST }}"},
-            {"name":"DB_PORT","value":"${{ secrets.DB_PORT }}"},
+            {"name":"DB_HOST","value":"${{ vars.RDS_HOST }}"},
+            {"name":"DB_PORT","value":"${{ vars.RDS_PORT }}"},
             {"name":"DB_NAME","value":"${{ secrets.DB_NAME }}"},
-            {"name":"DB_USER","value":"${{ secrets.DB_USER }}"},
-            {"name":"DB_PASSWORD","value":"${{ secrets.DB_PASSWORD }}"},
-            {"name":"REDIS_ADDR","value":"${{ secrets.ELASTICACHE_ADDR }}"},
-            {"name":"REDIS_PASSWORD","value":"${{ secrets.REDIS_PASSWORD }}"},
+            {"name":"DB_USER","value":"${{ vars.RDS_USER }}"},
+            {"name":"DB_PASSWORD","value":"${{ vars.RDS_PASSWORD }}"},
+            {"name":"REDIS_ADDR","value":"${{ vars.ELASTICACHE_ADDR }}"},
+            {"name":"REDIS_PASSWORD","value":"${{ vars.ELASTICACHE_PASSWORD }}"},
             {"name":"SECRET_KEY","value":"${{ secrets.SECRET_KEY }}"},
             {"name":"KAKAO_REST_API_KEY","value":"${{ secrets.KAKAO_REST_API_KEY }}"},
             {"name":"KAKAO_ISSUER","value":"${{ secrets.KAKAO_ISSUER }}"},
