--- a/.github/workflows/dev_ci_cd.yml
+++ b/.github/workflows/dev_ci_cd.yml
@@ -73,6 +73,7 @@ jobs:
           export DB_USER=$DB_USER
           export DB_PASSWORD=$DB_PASSWORD
           export REDIS_ADDR=$REDIS_ADDR
+          export REDIS_PORT=$REDIS_PORT
           export REDIS_PASSWORD=$REDIS_PASSWORD
           export SECRET_KEY=$SECRET_KEY
           export KAKAO_REST_API_KEY=$KAKAO_REST_API_KEY
