--- a/.github/workflows/prod_ci_cd.yml
+++ b/.github/workflows/prod_ci_cd.yml
@@ -75,7 +75,7 @@ jobs:
             {"name":"REDIS_PORT","value":"${{ vars.ELASTICACHE_PORT }}"},
             {"name":"REDIS_PASSWORD","value":""},
             {"name":"SECRET_KEY","value":"${{ secrets.SECRET_KEY }}"},
-            {"name":"KAKAO_REST_API_KEY","value":"${{ secrets.KAKAO_REST_API_KEY }}"},
+            {"name":"KAKAO_REST_API_KEY","value":"${{ secrets.KAKAO_PROD_API_KEY }}"},
             {"name":"KAKAO_ISSUER","value":"${{ secrets.KAKAO_ISSUER }}"},
             {"name":"JWT_ISSUER","value":"${{ secrets.JWT_ISSUER }}"},
             {"name":"JWT_ACCESS_VALIDITY_SECONDS","value":"${{ secrets.JWT_ACCESS_VALIDITY_SECONDS }}"},
