--- a/.github/workflows/dev_pr_ci.yml
+++ b/.github/workflows/dev_pr_ci.yml
@@ -23,4 +23,6 @@ jobs:
         run: go test ./... -v
 
       - name: Build project
+        env:
+          SERVER_MODE: test
         run: go build -v ./...
