--- a/.github/workflows/dev_ci_cd.yml
+++ b/.github/workflows/dev_ci_cd.yml
@@ -42,6 +42,7 @@ jobs:
 
       - name: Trigger Docker update script on Raspberry Pi
         env:
+          SERVER_MODE: test
           PI_HOST: ${{ secrets.PI_HOST }}
           PI_USER: ${{ secrets.PI_USER }}
           PI_PASSWORD: ${{ secrets.PI_PASSWORD }}
@@ -65,6 +66,7 @@ jobs:
         run: |
           sshpass -p $PI_PASSWORD ssh -o StrictHostKeyChecking=no $PI_USER@$PI_HOST << EOF
           echo "Connected to Raspberry Pi"
+          export SERVER_MODE=$SERVER_MODE
           export PINECONE_API_KEY=$PINECONE_API_KEY
           export PINECONE_INDEX=$PINECONE_INDEX
           export DB_HOST=$DB_HOST
