fix: recover prod_ci_cd.yml

--- a/.github/workflows/prod_ci_cd.yml
+++ b/.github/workflows/prod_ci_cd.yml
@@ -83,14 +83,10 @@ jobs:
             {"name":"JWT_REFRESH_VALIDITY_SECONDS","value":"${{ secrets.JWT_REFRESH_VALIDITY_SECONDS }}"}
           ]' task-definition.json > new-task-definition.json
 
-      - name: Enable Execute Command
-        run: |
-          jq '.enableExecuteCommand = true' new-task-definition.json > new-task-definition-with-exec.json
-
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: new-task-definition-with-exec.json
+          task-definition: new-task-definition.json
           service: ${{ env.ECS_SERVICE_NAME }}
           cluster: ${{ env.ECS_CLUSTER_NAME }}
           wait-for-service-stability: true
