feat: updated ci cd

--- a/.github/workflows/dev_ci_cd.yml
+++ b/.github/workflows/dev_ci_cd.yml
@@ -60,6 +60,8 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           KAKAO_REST_API_KEY: ${{ secrets.KAKAO_REST_API_KEY }}
           KAKAO_ISSUER: ${{ secrets.KAKAO_ISSUER }}
+          APPLE_CLIENT_ID: ${{ secrets.APPLE_CLIENT_ID }}
+          APPLE_ISSUER: ${{ secrets.APPLE_ISSUER }}
           JWT_ISSUER: ${{ secrets.JWT_ISSUER }}
           JWT_ACCESS_VALIDITY_SECONDS: ${{ secrets.JWT_ACCESS_VALIDITY_SECONDS }}
           JWT_REFRESH_VALIDITY_SECONDS: ${{ secrets.JWT_REFRESH_VALIDITY_SECONDS }}
@@ -80,6 +82,8 @@ jobs:
           export SECRET_KEY=$SECRET_KEY
           export KAKAO_REST_API_KEY=$KAKAO_REST_API_KEY
           export KAKAO_ISSUER=$KAKAO_ISSUER
+          export APPLE_CLIENT_ID=$APPLE_CLIENT_ID
+          export APPLE_ISSUER=$APPLE_ISSUER
           export JWT_ISSUER=$JWT_ISSUER
           export JWT_ACCESS_VALIDITY_SECONDS=$JWT_ACCESS_VALIDITY_SECONDS
           export JWT_REFRESH_VALIDITY_SECONDS=$JWT_REFRESH_VALIDITY_SECONDS
