--- a/.github/workflows/prod_ci_cd.yml
+++ b/.github/workflows/prod_ci_cd.yml
@@ -83,6 +83,8 @@ jobs:
             {"name":"SECRET_KEY","value":"${{ secrets.SECRET_KEY }}"},
             {"name":"KAKAO_REST_API_KEY","value":"${{ secrets.KAKAO_PROD_API_KEY }}"},
             {"name":"KAKAO_ISSUER","value":"${{ secrets.KAKAO_ISSUER }}"},
+            {"name":"APPLE_CLIENT_ID","value":"${{ secrets.APPLE_CLIENT_ID }}"},
+            {"name":"APPLE_ISSUER","value":"${{ secrets.APPLE_ISSUER }}"},
             {"name":"JWT_ISSUER","value":"${{ secrets.JWT_ISSUER }}"},
             {"name":"JWT_ACCESS_VALIDITY_SECONDS","value":"${{ secrets.JWT_ACCESS_VALIDITY_SECONDS }}"},
             {"name":"JWT_REFRESH_VALIDITY_SECONDS","value":"${{ secrets.JWT_REFRESH_VALIDITY_SECONDS }}"}
