--- a/.github/workflows/prod_ci_cd.yml
+++ b/.github/workflows/prod_ci_cd.yml
@@ -68,7 +68,13 @@ jobs:
       - name: Add environment variables to the task definition
         run: |
           jq '.containerDefinitions[0].environment += [
+            {"name":"SERVER_MODE","value":"prod"},
             {"name":"GIT_SHA","value":"${{ env.GIT_SHA }}"},
+            {"name":"APPLE_CLIENT_ID","value":"${{ secrets.APPLE_CLIENT_ID }}"},
+            {"name":"APPLE_ISSUER","value":"${{ secrets.APPLE_ISSUER }}"},
+            {"name":"JWT_ISSUER","value":"${{ secrets.JWT_ISSUER }}"},
+            {"name":"JWT_ACCESS_VALIDITY_SECONDS","value":"${{ secrets.JWT_ACCESS_VALIDITY_SECONDS }}"},
+            {"name":"JWT_REFRESH_VALIDITY_SECONDS","value":"${{ secrets.JWT_REFRESH_VALIDITY_SECONDS }}"}
           ]' task-definition.json > new-task-definition.json
 
       - name: Deploy Amazon ECS task definition
