feat: fix github action to push with tags

--- a/.github/workflows/prod_ci_cd.yml
+++ b/.github/workflows/prod_ci_cd.yml
@@ -2,7 +2,7 @@ name: Build and Deploy to ECS
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "past/master" ]
 
 jobs:
   build-and-deploy:
