--- a/.github/workflows/dev_ci_cd.yml
+++ b/.github/workflows/dev_ci_cd.yml
@@ -17,22 +17,25 @@ jobs:
         with:
           go-version: '1.24'
 
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          default_bump: patch
+
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Generate version tag
-        id: generate_tag
-        run: echo "TAG=v$(date +'%Y%m%d-%H%M')" >> $GITHUB_ENV
-
-      - name: Build and push Docker image (latest + versioned)
+      - name: Build and push Docker image (latest + semver)
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:latest
-            ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:${{ env.TAG }}
-          platforms: linux/arm64,linux/amd64
+            ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPOSITORY }}:${{ steps.tag_version.outputs.new_tag }}
+          platforms: linux/arm64
